fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,10 @@
     sans-serif;
 }
 
+body {
+  overflow: hidden;
+}
+
 img {
   max-width: 100%;
 }
